--- a/aubreyHickman/AubreyHickmanExtAbstract.Rmd
+++ b/aubreyHickman/AubreyHickmanExtAbstract.Rmd
@@ -1,55 +1,72 @@
 ---
-title: "What is going on in someone’s head when they do melodic dictation?"
+title: "What is happening in a student’s mind when they do melodic dictation?"
 author: "David John Baker"
+bibliography: book.bib
 output:
   pdf_document: default
   html_document: default
+  word_document: default
 subtitle: Aubrey Hickman Award Application
-bibliography: book.bib
 biblio-style: apalike
 ---
+
+## Models of Melodic Dictation
+
+Teaching melodic dictation involves instructing students on what and where to direct their attention in order to improve their abilities. 
+This process has been formalized by Gary Karpinski into four discrete steps of hearing, memorizing, understanding, and notating. 
+These steps help students break down the overwhelming amount of mental processes they need to coordinate in order to successfully complete a melodic dictation [@karpinskiAuralSkillsAcquisition2000]. 
+As students’ experience increases, they are able memorize larger chunks of music and often find themselves able to dictate music they once found difficult. 
+But what is happening in the student’s mind over the course of aural skills instructions that allows for this growth? 
+
+This paper puts forward a computational, cognitive model of melodic dictation with the goal of helping explain how students improve at melodic dictation. 
+The model is based in research from both cognitive psychology [@cowanMagicalMysteryFour2010] and computational musicology [@pearceStatisticalLearningProbabilistic2018a] and incorporates relevant theoretical aspects such as working memory and the structure of the melody itself. 
+In this paper I demonstrate how modeling the cognitive decision process during melodic dictation helps provide a precise framework for pedagogues to understand student’s inner cognition during melodic dictation and can help inform teaching practice. 
+
+Using a cadential passage from Schubert’s Octet in D Major (D. 803), I walk through an iteration of the model and show how the model’s choices aligns with intuitions of aural skills pedagogues to establish the model’s verisimilitude. 
+The model consists of three main modules:  Prior Knowledge, Selective Attention, and Transcription. 
+First, the model is trained using a computational model of auditory cognition [@pearceConstructionEvaluationStatistical2005] that derives measures of expectancy based on prior listening experience. 
+Second, the melody is “heard” by the computer and the incoming musical is chunked based on the information content of the melody as shown in Figure 2. 
+Third, the model searches for a match within the Prior Experience and if found, the contents of Selective Attention are successfully notated. 
+If not, the model truncates the chunk and recursively repeats the process. 
+An entire iteration of the model is shown in Figure 3 and the entire model written in pseudocode is given in Figure 4. 
+
+In addition to quantifying each step, the model incorporates flexible parameters that could be adjusted in order to accommodate  individual differences, while still relying on a domain general process.
+By relying on cognitive mechanisms based in statistical learning, rather than a rule based system for music analysis [@lerdahlGenerativeTheoryTonal1986; @narmourAnalysisCognitionBasic1990; @narmourAnalysisCognitionMelodic1992; @temperleyCognitionBasicMusical2004] this model allows for the heterogeneity of musical experience among a diversity of music listeners.
+
+After giving a brief overview of the model, I then argue the model’s implications for teaching melodic dictation and suggest how combining research from music cognition and music theory can help create a more linear path to success among students. 
+Presenting a computational model additionally demonstrates every ontological commitment, thus making it completely amenable to criticism allowing it serve as a point of conversational departure in discussions of best practice for melodic dictation pedagogy. 
+This paper directly address the recurring call [@davidbutlerWhyGulfMusic1997a; @karpinskiAuralSkillsAcquisition2000; @klonoskiImprovingDictationAuralSkills2006] to address the chasm in research between music cognition and music theory pedagogy. 
+
+\newpage
 
 ## Levels of Abstraction
 
 In his 2007 article _Models of Music Similarity_, Geraint Wiggins distinguishes between _descriptive_ and _explanatory_ models in describing the modeling of human behavior [@wigginsModelsMusicalSimilarity2007]. 
 Descriptive models assert what will happen in response to an event.
-For example, as the note density of a melody increases and the tonalness of a melody decreases, a melody may become harder to dictate [@baker-melodic-2018].
-While the increase in note density is assumed to drive the decrease in dictation scores, merely stating that there is an established relationship between one variable and the other says nothing about the inner workings of this process.
+For example, as the note density of a melody increases and the tonalness of a melody decreases, a melody may become harder to dictate (Baker, Monzingo, & Shanahan, 2018).
+While the increase in note density is assumed to drive the decrease in dictation scores, merely stating that there is an established relationship between one variable and the other says nothing about the causal mechanisms involved in this process.
 An explanatory model on the other hand not only describes what will happen, but additionally notes why and how this process occurs.
-For example, work musical expectation demonstrates that as an individual's exposure to a musical style increases, so does their ability to predict specific events within a given musical texture [@pearceStatisticalLearningProbabilistic2018a].
+For example, work in musical expectation demonstrates that as an individual's exposure to a musical style increases, so does their ability to predict specific events within a given musical texture [@pearceStatisticalLearningProbabilistic2018a].
 
-Not only does more exposure predict more accurate responses, but many of these models of musical expectation derive their underlying predictive power from the brain's ability to implicitly track statistical regularities in musical perception [@saffranStatisticalLearningTone1999;@margulisRepeatHowMusic2014].
-The _how_ derives from the tracking of statistical regularities in musical information and the _why_ derives from evolutionary demands; Organisms that are able to make more accurate predictions about their environment are more likely to survive and pass on their genes [@huronSweetAnticipation2006]. 
+Not only does more exposure predict more accurate responses, but many of these models of musical expectation derive their underlying predictive power from the brain's ability to implicitly track statistical regularities in their auditory environment [@saffranStatisticalLearningTone1999;@margulisRepeatHowMusic2014].
+The _how_ derives from the tracking of statistical regularities in musical information and the _why_ derives from evolutionary demands.
+Organisms that adapt abilities to make more accurate predictions about their environment are more likely to survive and pass on their genes [@huronSweetAnticipation2006]. 
 
 Wiggins writes that although there can be both explanatory and descriptive theories, depending on the level of abstraction, a theory may be explanatory at one level, yet descriptive at another.
 Using the mind-brain dichotomy, he asserts that the example of a theory of musical expectation could be explanatory at the level of behavior as noted above, but says nothing about what is happening at the neural level.
 Both descriptive and explanatory theories are needed: descriptive theories are used to test explanatory theories and by stringing together different layers of abstraction, we can arrive at a better understanding of how the world works.
 
-One area of research lacking in any explanatory models is work on melodic dictation.
-Teaching melodic dictation involves instructing students on what and where to direct their attention in order to improve their abilities. 
-This process has been formalized by Gary Karpinski into four discrete steps of hearing, memorizing, understanding, and notating, which help students break down the overwhelming amount of mental processes they need to coordinate in order to successfully complete a melodic dictation [@karpinskiAuralSkillsAcquisition2000]. 
-As students’ experience increases, they are able memorize larger chunks of music and more easily able to dictate music they once found difficult. 
 Under Wiggins' framework the Karpinski model of melodic dictation [@karpinskiAuralSkillsAcquisition2000; @karpinskiModelMusicPerception1990] qualifies as a descriptive model.
-The model says what happens over the time course of a melodic dictation-- specifying four discrete stages discussed in earlier chapters-- but does not explicitly state _how_ or _why_ this process happens. 
-But what is going on in the student’s minds over the course of aural skills instructions that allows for this growth? 
+The model says what happens over the time course of a melodic dictation-- specifying four discrete stages discussed above-- but does not explicitly state _how_ or _why_ this process happens. 
 In order to have a more complete understanding of melodic dictation, an explanatory model is needed. 
-
-This paper puts forward a computational, cognitive model of melodic dictation with the goal of helping explain how students become better at melodic dictation. 
-The model is based in research from both cognitive psychology [@cowanMagicalMysteryFour2010] and computational musicology [@pearceConstructionEvaluationStatistical2005; @pearceStatisticalLearningProbabilistic2018a] and incorporates relevant theoretical aspects such as working memory and the structure of the melody itself that contribute to a student’s performance. 
-In this paper I demonstrate how modeling the cognitive decision process during melodic dictation helps provide a precise framework for pedagogues to understand the inner workings cognition during melodic dictation and can help inform teaching practice. 
-
-In addition to quantifying each step, the model incorporates flexible parameters that could be adjusted in order to accommodate  individual differences, while still relying on a domain general process.
-By relying on cognitive mechanisms based in statistical learning, rather than a rule based system for music analysis [@lerdahlGenerativeTheoryTonal1986; @narmourAnalysisCognitionBasic1990; @narmourAnalysisCognitionMelodic1992; @temperleyCognitionBasicMusical2004] this model allows for the heterogeneity of musical experience among a diversity of music listeners.
-
-Presenting a computational model additionally demonstrates every ontological commitment, thus making it completely vulnerable to criticism allowing it serve as a point of conversational departure in discussions of best practice for melodic dictation pedagogy. This paper directly address the recurring call [@davidbutlerWhyGulfMusic1997a; @karpinskiAuralSkillsAcquisition2000; @klonoskiImprovingDictationAuralSkills2006] to address the chasm in research between music cognition and music theory pedagogy. 
 
 ## Model Overview
 
 The model consists of three main modules, each with its own set of parameters:
 
-1. Prior Knowledge
-2. Selective Attention
-3. Transcription and Re-entry
+1. _Prior Knowledge_
+2. _Selective Attention_
+3. _Transcription and Re-entry_
 
 Inspired by Bayesian computational modeling, the _Prior Knowledge_ module reflects the previous knowledge an individual brings to the melodic dictation.
 The _Selective Attention_-- somewhat akin to Karpinski's extractive listening-- segments incoming musical information by using the window of attention as conceptualized as the limits of working memory capacity as a sensory bottleneck to constrict the size of musical chunk that an individual could to transcribe.
@@ -66,14 +83,17 @@ The _Prior Knowledge_ consists of a corpus of digitally represented melodies tak
 The logic of representing an individual's prior knowledge follows the assumptions of both the Statistical Learning Hypothesis (SLH) and the Probabilistic Prediction Hypothesis (PPH), both core theoretical assumptions of the Information Dynamic of Music (IDyOM) model of Marcus Pearce [@pearceConstructionEvaluationStatistical2005; @pearceStatisticalLearningProbabilistic2018a].
 Using a corpus of melodies to represent an individual's prior knowledge relies on the Statistical Learning Hypothesis which states:
 
-> musical enculturation is a process of implicit statistical learning in which listeners progressively acquire internal models of the statistical and structural regularities present in the musical styles to which they are exposed, over short (e.g., an individual piece of music) and long time scales (e.g., an entire lifetime of listening). p.2 (Pearce, 2018)
+> musical enculturation is a process of implicit statistical learning in which listeners progressively acquire internal models of the statistical and structural regularities present in the musical styles to which they are exposed, over short (e.g., an individual piece of music) and long time scales (e.g., an entire lifetime of listening).  (Pearce, 2018, pp.2)
 
 The logic here is that the more an individual is exposed musical material, the more they will implicitly understand it which leads the corroborating probabilistic prediction hypothesis which states: 
 
-> while listening to new music, an enculturated listener applies models learned via the SLH to generate probabilistic predictions that enable them to organize and process their mental representations of the music and generate culturally appropriate responses. p.2 (Pearce, 2018).
+> while listening to new music, an enculturated listener applies models learned via the SLH to generate probabilistic predictions that enable them to organize and process their mental representations of the music and generate culturally appropriate responses. (Pearce, 2018, pp.2).
 
 Taken together and then quantified using Shannon information content [@shannonMathematicalTheoryCommunication1948], it then becomes possible using the IDyOM framework to have a quantifiable measure that reliably predicts the amount of perceived unexpectedness in a musical melody that can change pending on the musical corpus that the model is trained on.
-As a model IDyOM has been successful mirroring human behavior in melodies in various styles [@pearceStatisticalLearningProbabilistic2018a], harmony-- outperforming [@harrisonDissociatingSensoryCognitive2018] sensory models of harmony [@bigandEmpiricalEvidenceMusical2014]--, and is also being developed to handle polyphonic materials [@sauvePredictionPolyphonyModelling2017]. 
+As a model IDyOM has been successful mirroring human behavior in melodies in various styles [@pearceStatisticalLearningProbabilistic2018a], harmony-- outperforming [@harrisonDissociatingSensoryCognitive2018] sensory models of harmony [@bigandEmpiricalEvidenceMusical2014]--, and is also being developed to handle polyphonic materials [@sauvePredictionPolyphonyModelling2017].
+
+This model assumes that IDyOM's calculations of information content, used in past research to quantify a measure of unexpectedness, can be used as a proxy for the actual amount of information that can be held in working memory.
+I make this assumption based one of the consequential outcomes of the Perceptual Fluency hypothesis [@bornsteinAttributionDiscountingPerceptual1994] which posits that stimuli an individual has been exposed to more frequently-- higher occurring n-grams-- will be processed more efficiently and thus be less of a tax on attention.
 
 Stepping beyond the assumptions of IDyOM, the prior knowledge also needs to have a implicit/explicitly known parameter which indicates whether or not an pattern of music-- or n-gram^[n-grams refer to the amount of musical objects in a string. For example a bi-gram or 2-gram, would be an interval. Tri-grams or 3-grams would consist of two intervals and so on.] pattern-- is explicitly learned.
 This threshold can be set relative to the entire distribution of all n-grams in the corpus. 
@@ -82,11 +102,11 @@ Having established that the models' first parameters to be decided are the repre
 Although there has been a large amount of work on different ways to segment the musical surface using rule based methods [@lerdahlGenerativeTheoryTonal1986; @margulisModelMelodicExpectation2005; @narmourAnalysisCognitionBasic1990; @narmourAnalysisCognitionMelodic1992], which rely on matching a music theorist's intuition with a set of descriptive rules somewhat like the boundary formation rules put forward in _A Generative Theory of Tonal Music_, as noted by Pearce [@pearceStatisticalLearningProbabilistic2018a], rule based models often fail at when applied to music outside the Western art music canon.
 Additionally, since melodic dictation is an active memory process, rather than a semi-passive process of listening, this model needs to be able to quantify musical information on two conditions.
 The first is that it must be dependent on prior musical experience.
-The second is that it should allow for a movable boundary for selective attention so that musical information that is memory can be actively maintained while carrying out another cognitive process, that of notating the melody. 
+The second is that it should allow for a movable boundary for selective attention so that musical information that is in memory can be actively maintained while carrying out another cognitive process, that of notating the melody. 
 In order to create this metric, I rely on IDyOM's use of information content [@shannonMathematicalTheoryCommunication1948] which quantifies the information content of melodies based on corpus of materials.
 
-For example, when trained against a corpus of melodies, this excerpt in Figure 7.1 from the fourth movement of Schubert's _Octet in F Major_ (D.803) lists the information content of the excerpt calculated for each note atop the notation^[The following musical examples is taken from @pearceStatisticalLearningProbabilistic2018a reflects a model where IDyOM was configured to predict pitch with an attribute linking melodic pitch interval and chromatic scale degree (pitch and scale degree) using both the short-term and long-term models, the latter trained on 903 folk songs and chorales (data sets 1, 2, and 9 from table 4.1 in [@schaffrathEssenFolkSong1995] comprising 50,867 notes.]
-Appearing in Figure 7.2, I plot the cumulative information content of the melody, along with both an arbitrary threshold for the limits of working memory capacity and where the subsequent segmentation boundary for musical material to be put in the _Selective Attention_ buffer would be.
+For example, when trained against a corpus of melodies, this excerpt in Figure 1 from the fourth movement of Schubert's _Octet in F Major_ (D.803) lists the information content of the excerpt calculated for each note atop the notation^[The following musical examples is taken from @pearceStatisticalLearningProbabilistic2018a reflects a model where IDyOM was configured to predict pitch with an attribute linking melodic pitch interval and chromatic scale degree (pitch and scale degree) using both the short-term and long-term models, the latter trained on 903 folk songs and chorales (data sets 1, 2, and 9 from table 4.1 in [@schaffrathEssenFolkSong1995] comprising 50,867 notes.]
+Appearing in Figure 2, I plot the cumulative information content of the melody, along with both an arbitrary threshold for the limits of working memory capacity and where the subsequent segmentation boundary for musical material to be put in the _Selective Attention_ buffer would be.
 These values chosen show a small example of how the _Selective Attention_ module works.
 The advantage of operationalizing how an individual hears a melody like this is that melodies with lower information content, derived from an understanding of having more predictable patterns from the corpus, will allow for larger chunks to be put inside of the selective attention buffer. 
 Additionally, individuals with higher working memory capacity would be able to take in more musical information.
@@ -100,7 +120,7 @@ knitr::include_graphics("img/cumSchubert.jpeg")
 ```
 
 It is important to highlight that the notes above the melody here are dependent on what is current in the _Prior Knowledge_ module.
-A corpus of _Prior Knowledge_ with less melodies would lead to higher information content measures for each set of notes, while a prior knowledge that has extensive tracking of the patterns would lead to lower information content. 
+A corpus of _Prior Knowledge_ with less melodies would theoretically lead to higher information content measures for each set of notes, while a prior knowledge that has extensive tracking of the patterns would lead to lower information content in line with the Probabilistic Prediction Hypothesis. 
 This increase in predictive accuracy mathematically reflects the intuition that those with more listening experience can process greater chunks of musical information. 
 
 ### Setting Limits with Transcribe
@@ -112,10 +132,11 @@ Modulating this boundary will help provide insights into the degree to which mel
 
 ### Pattern Matching
 
-With subset of notes of the melody represented in the attentional buffer, whether or not the melody becomes notated depends on whether or not the melody or string in the buffer can be matched with a string that is explicitly known in the corpus.
+With a subset of notes of the melody represented in the attentional buffer, whether or not the melody becomes notated depends on whether or not the melody or string in the buffer can be matched with a string that is explicitly known in the corpus.
 Mirroring a search pattern akin to Cowan's Embedded Process model [@cowanEvolvingConceptionsMemory1988; @cowanMagicalMysteryFour2010], the individual would search across their long term memory, or _Prior Knowledge_ for anything close to or resembling the pattern in the _Selective Attention_ buffer.
 Cowan's model differs from other more module based models of working memory like those of @baddeleyWorkingMemory1974 by positing that working memory should be conceptualized as a small window of conscious attention.
-As an individual directs their attention to concepts represented in their long term memory, they can only spotlight a finite amount of information where categorical information regarding what is in the window of attention not far from retrieval.
+As an individual directs their attention to concepts represented in their long term memory, they can only spotlight a finite amount of information.
+Related categorical information that is similar to the contents of the window of attention are not far from retrieval.
 
 When searching for a pattern match, the _Transcription_ module is at work.
 If a pattern match that has been moved to _Selective Attention_ is immediately found, the contents of _Selective Attention_ would be considered to be notated.
@@ -133,82 +154,20 @@ The model here would register that one iteration of the function has been run an
 After recording this history, the process would happen again starting at either the next note from where the model left off, the note in the entire string with the lowest information content, or n-gram left in the melody with that is most represented in the corpus.
 This parameter is defined before the model is run and the question of dictation re-entry certainly warrants further research and investigation. 
 
-Upon the successful pattern match of a string, the _Selective Attention_ and _Transcription_ module would need too then be run again.
+Upon the successful pattern match of a string, the _Selective Attention_ and _Transcription_ module would need to then be run again.
 This process is done via the _Re-entry_ function. 
 
-### Completion 
+## Formal Model 
 
-Given the recursive nature of this process, if all 2-grams are explicitly represented in the _Prior Knowledge_ then the target melody should be transcribed.
-If only represented using such a small chunk, the model will have to loop over the melody many times, thus indicating that the transcriber had a high degree of difficulty dictating the melody.
-If there is a gap in explicit knowledge in the prior knowledge, only patches of the melody will be recorded and the melody will not be recorded in its entirety.
-An easier transcription will result in less iterations of the model with larger chunks.
-Though the current instantiation of the model does not incorporate how multiple hearings might change how a melody is dictated, one could constrain the process to only allow a certain number of iterations to reflect this.
-Of course as a new melody is learned it is slowly being introduced into long term memory and could be completely be capable of being represented in long term memory without being explicitly notated at the end of a dictation with time running out and thus not possible to be completed.
-This of course then would be imposing some sort of experimental constraint on the process and since this is meant to be a cognitive computational model of melodic dictation this caveat would complicate the model.
-Future research could be done to optimize the choices that the model makes in order to satisfy whatever constraints are imposed and could be an interesting avenue of future research, but are beyond the initial goals of the model.
-
-## Formal Model
-
-Below I present the computational model in psudeocode as described in Figure 7.3.
+Below I present the computational model in psudeocode as described in Figure 3.
 First listed are the defined inputs, the functions needed to run the algorithm, and then the sequence the model runs.
 To aid distinguishing between functions and objects, I put functions in italics and objects in bold.
-Below the model in Figure 7.4, I provide a brief walk through of one iteration of the model.
 
-### Computational Model 
 
 ```{r, echo=FALSE, fig.cap="Formal Model",fig.align='center', out.width="100%"}
 knitr::include_graphics("img/Model.pdf")
 ```
 
-### Example
-
 ```{r, echo=FALSE, fig.cap="Model Example",fig.align='center', out.width="100%"}
 knitr::include_graphics("img/Model Graphic.pdf")
 ```
-
-The example above shows one iteration of the model run using the musical example from above using a hypothetical corpus for the pattern matching.
-Using the model above, the following inputs were defined _a priori_:
-
-* The **Prior Knowledge** is a hypothetical corpus of symbolic strings representing all n-grams of melodies
-* The **Threshold** is set to **five** exact matches in the **Prior Knowledge**
-* The **WMC** is set at 17 
-* The **Target Melody** is the Schubert excerpt from above
-* The **String Position** object is used to track the position in the dictation
-* The **Difficulty** object starts at 0
-* The **Dictation** object is ```NULL``` to begin, and each new n-gram successfully transcribed is annexed to it
-
-Figure 7.4 progresses from left to right over the course of time.
-The algorithm begins by first running the ```listen()``` function on the **Target Melody**.
-First the model checks that there are notes to transcribe; this being the first loop of the model, this is statement will be ```FALSE``` so the next step is taken.
-Notes of the **Target Melody** are read in to the **Selective Attention** buffer until the information content of the melody exceeds that of the working memory threshold.
-This is depicted graphically in the leftmost panel of Figure 7.4.
-Each note unfolding over time fills up the **Selective Attention** working memory buffer.
-When the amount of information reaches the perceptual bottleneck-- as indicated by the dashed line-- the **Selective Attention** buffer stops receiving information.
-At this point the model will mark where in the melody it stopped taking in new information for later.
-Here the contents in **Selective Attention** are moved to the ```transcribe()``` function.
-
-With the contents of **Selective Attention** passed to ```transcribe()```, the model adds one to the counter indicating the first search is about to run.
-Moving to the middle panel of Figure 7.4, the symbol string of notes in the first column are indexed against the **Prior Knowledge**.
-Only if a five note pattern has appeared more than or equal to  five times, as determined by the **Threshold** input, will the corresponding ```EXPLICIT``` column be ```TRUE```.
-In this case, this pattern has occurred over the threshold of 5 and thus a successful match is found.
-It is at this step that the search resembles that of Cowan's model of working memory as active attention.
-The pattern being searched for is compared against a vast amount of information, with cues from the contents of what is in **Selective Attention** grouping similar patterns together.
-At the neural level, this is most likely a much more complex process, but to show this grouping I note that this search is at least organized by the first pitch.
-I assume it would be reasonable that patterns starting on G as $\hat{5}$^[As determined by being calculated against the corpus with both pitch and scale degree information] might happen together.
-Since this string does have a ```TRUE``` match with ```EXPLICIT```, the contents of **Selective Attention** are considered notated.
-At this point the model would record the 5-gram, along with the string that it was matched with.
-the function would then re-run the ```listen``` function via the ```notateReentry()``` function at the next point in the melody as tracked by the **String Position** object.
-
-If there were not to have been an exact match, the model would remove one token from the melody and performed the search again on the knowledge of all 4-grams and add one to the **Difficulty** counter.
-This process would happen recursively until a match is found.
-If no match is found in either the complex representation, or that of the two rhythm and pitch corpora, the fifth step of ```transcribe()``` would trigger ```notateReentry()``` to be run without documenting the n-gram currently being dictated.
-This would be akin to a student not being able to identify a difficult interval, thus having to restart the melody at a new position.
-Decisions about re-entry warrant further research and discussion, but this model for the sake of parsimony, assumes linear continuation. 
-As notated in §7.3.5, other modes of re-entry could be incorporated into the model. 
-
-This looping process would occur again and again until the entire melody is notated.
-With each iteration of each n-gram notated, the difficulty counter would increase in relation to the representation of that string in the corpus. 
-This provides an algorithmic implementation of a theorist's intuition that less common n-grams or intervals (2-grams) are going to lead to higher difficulty in dictation.
-Also worth noting is steps 3 and 4 in the ```transcribe()``` function are akin to Karpinski's proto-notation.
-Further research might consider advantages in the order of searching the **Prior Knowledge** corpora. 
-\newpage
